# Obsidian

./: .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  install.sh  package-lock.json  package.json  setup-dev.sh  start-all.js  start-all.ps1  start-ghostwire.bat  update-ghostwire.bat  update_cursor.sh
.cargo/: config.toml
docs/: index.html  roadmap.md  threat_model.md  use_cases.md
docs/_astro/: markdown-page.nLLLoV2n.css
docs/markdown-page/: index.html
ghostwire/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
ghostwire/docs/: API.md
ghostwire/src/: main.rs  web.rs
ghostwire/src/cli/: commands.rs  mod.rs
ghostwire/src/core/: adapter_registry.rs  briar.rs  disaster.rs  encryption.rs  federation.rs  identity.rs  mesh.rs  message.rs  mod.rs  networking.rs  reputation.rs  reticulum.rs  security.rs  stealth_tcp.rs  store.rs  traffic.rs  transport.rs  transport_manager.rs
ghostwire/tests/: api_integration.rs
src/: web.rs
src/core/: identity.rs  mod.rs
tests/: disaster_trigger.rs  store_quota.rs  sybil_attack.rs
webui/: build-all.bat  index.html  package-lock.json  package.json  tailwind.config.js
webui/src/: App.css  App.tsx  AppSettings.tsx  ChatList.tsx  ChatWindow.tsx  ContactList.tsx  Feed.tsx  GroupList.tsx  HelpPanel.tsx  MeshNetwork.tsx  MessageBubble.tsx  MessageInput.tsx  NotificationsSettings.tsx  OnboardingWizard.tsx  PrivacySettings.tsx  ProfileSettings.tsx  Sidebar.tsx  StealthModePanel.tsx  index.css  state.tsx  style.css  types.ts
webui/src-tauri/: Cargo.toml  tauri.conf.json
webui/src-tauri/src/: main.rs  web.rs
webui/src-tauri/src/cli/: commands.rs
webui/src-tauri/src/core/: encryption.rs  identity.rs  message.rs  mod.rs  store.rs  transport.rs
webui/src/components/: FeatureGrid.tsx  HeroSection.tsx  RoadmapTimeline.tsx  TestimonialCarousel.tsx
webui/src/pages/: Community.tsx  Docs.tsx  Features.tsx  Home.tsx  Outreach.tsx  Roadmap.tsx
webui/src/services/: api.ts  ws.ts
