[package]
name = "ghostwire"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
rand = "0.8"
futures = "0.3"
bytes = "1.4"
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
