[package]
name = "ghostwire"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography and security
libp2p = { version = "0.56.0", features = [
    "macros",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
    "noise",
    "tcp",
    "yamux"
] }
libp2p-mdns = { version = "0.48.0", features = ["tokio"] }
libp2p-tcp = "0.44.0"

# Cryptographic primitives for Reticulum
aes-gcm = "0.10"
blake2b_simd = "1.0"
getrandom = "0.2"
ring = "0.16"

# Mesh networking - Reticulum-inspired
# reticulumnet = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }

# Base64 encoding
base64 = "0.21"

# Network utilities
local-ip-address = "0.5"

# File system
tokio-fs = "0.1"

# CLI and system
clap = { version = "4.0", features = ["derive"] }
hostname = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
debug = 1

[patch.crates-io]
libp2p-mdns = { path = "vendor/libp2p-mdns-0.48.0" }
