[package]
name = "ghostwire"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
ring = "0.17"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
local-ip-address = "0.5"
hostname = "0.4"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
tauri = { version = "2.3.0", features = [] }
log = "0.4"
tauri-plugin-log = "2.3.0"

[features]
p2p = []

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
debug = 1

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
